src/samples/diagnostic_01.txt
error: this is an error
 --> the thing:1:5
  |
1 | this is a triumph
         ^^
